--- a/contacts.html
+++ b/contacts.html
@@ -81,7 +81,9 @@
         </div>
     </div>
 </header>
+
 <div class="body-padding"></div>
+
 <main class="main ">
     <div class="container">
         <div class="row">
@@ -95,32 +97,32 @@
     <section class="s-contacts">
         <div class="container overlap">
 
-            <div class="row s-news__top mb-32">
+            <div class="row s-contacts__top mb-32">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <h3 class="heading decor text-bold text-xl --relative">Наши контакты</h3>
                 </div>
             </div>
 
             <div class="row m-row mb-32">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-12 column">
                     <div class="contact decor --relative">
                         <div class="contact__title text-bold">Позвоните нам</div>
                         <a href="tel:+00000000000" class="contact__info">+0 000 000 00 00</a>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-12 column">
                     <div class="contact decor  --relative">
                         <div class="contact__title text-bold">Напишите нам</div>
                         <a href="mailto:klan@gmail.com" class="contact__info">klan@gmail.com</a>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-12 column">
                     <div class="contact decor  --relative">
                         <div class="contact__title text-bold">Наш адрес</div>
                         <a href="" class="contact__info">9VW8+X5W, Təbriz küçəsi, Bakı, Азербайджан</a>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-12 column">
                     <div class="contact decor  --relative">
                         <div class="contact__title text-bold">Время работы</div>
                         <div class="contact__info">ПН-ПТ: с 10:00 до 19:00</div>
@@ -221,14 +223,17 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-xl-8">© 2024 KLAN | Все права защищены <span
-                        class="f-divider">&nbsp;</span><a
-                        href="/privacy">Політика конфіденційності</a></div>
+                <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                    <div class="copyright">
+                        <span>© 2024 KLAN | Все права защищены </span>
+                        <a href="">Політика конфіденційності</a>
+                    </div>
+                </div>
 
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="develop d-flex align-middle align-right">
                         <div class="develop__text">Разработано:</div>
-                        <a href="https://redstone.media/" class="d-inline-flex align-items-center develop__link">
+                        <a href="" class="d-inline-flex align-items-center develop__link">
                             <img src="assets/img/WebTune-logo.svg">
                         </a>
                     </div>
