--- a/portfolio.html
+++ b/portfolio.html
@@ -288,14 +288,17 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-xl-8">© 2024 KLAN | Все права защищены <span
-                        class="f-divider">&nbsp;</span><a
-                        href="/privacy">Політика конфіденційності</a></div>
+                <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                    <div class="copyright">
+                        <span>© 2024 KLAN | Все права защищены </span>
+                        <a href="">Політика конфіденційності</a>
+                    </div>
+                </div>
 
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <div class="develop d-flex align-middle">
+                    <div class="develop d-flex align-middle align-right">
                         <div class="develop__text">Разработано:</div>
-                        <a href="https://redstone.media/" class="d-inline-flex align-items-center develop__link">
+                        <a href="" class="d-inline-flex align-items-center develop__link">
                             <img src="assets/img/WebTune-logo.svg">
                         </a>
                     </div>
@@ -305,7 +308,6 @@
         </div>
     </div>
 </footer>
-
 <script src="./assets/js/jquery-3.7.0.min.js"></script>
 <script src="assets/js/swiper-bundle.min.js"></script>
 <script src="assets/js/js_app.min.js"></script>
