--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
     <span></span>
 </div>
 <div class="body-padding"></div>
+
 <header class="header ">
     <div class=" container">
         <div class="header__inner d-flex align-middle align-justify">
@@ -48,17 +49,17 @@
                 <nav class="navbar__menu">
                     <ul class="menu">
                         <li class="menu-item  current-menu-item">
-                            <a href="">О нас</a>
+                            <a href="about.html">О нас</a>
                         </li>
                         <li class="menu-item">
                             <a href="portfolio.html"> Портфолио</a>
                         </li>
                         <li class="menu-item">
-                            <a href="">Новости</a>
+                            <a href="blog.html">Новости</a>
                         </li>
 
                         <li class="menu-item">
-                            <a href="">Контакты</a>
+                            <a href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -83,7 +84,81 @@
         </div>
     </div>
 </header>
+<style>
+    /
+    /
+    Quote slider
+    .quote-slider-wrapper {
+        -ms-flex: 0 0 50%;
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
 
+    .quote-slider {
+        height: 100vh;
+    }
+
+    .quote-text-wrap {
+        display: flex;
+        height: 100%;
+    }
+
+    .quote-text {
+        max-width: 500px;
+        align-self: center;
+        margin: 0 10%;
+        font-size: 24px;
+    }
+
+    .quote-text {
+        transition: all 0.3s;
+    }
+
+    .swiper-slide.swiper-slide-next .quote-text,
+    .swiper-slide.swiper-slide-prev .quote-text {
+        opacity: 0;
+    }
+
+    .swiper-slide.swiper-slide-active .quote-text {
+        opacity: 1;
+    }
+
+    .image-slider-wrapper {
+        position: relative;
+        -ms-flex: 0 0 50%;
+        flex: 0 0 50%;
+        max-width: 50%;
+        background-color: #f1f1f1;
+    }
+
+    .image-slider {
+        height: 100vh;
+    }
+
+    .swiper-slide {
+    / / for custom transition position: relative;
+        overflow: hidden;
+    }
+
+    .swiper-slide-inner {
+    / / for custom transition position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+
+    .swiper-slide img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 50% 50%;
+    }
+    .ipad-slider {
+        display: flex;
+    }
+</style>
 <main class="main ">
 
     <section class="s-introduce mb-180 --relative">
@@ -323,15 +398,14 @@
             </div>
 
 
-
-        <div class="swiper-button__wrap d-flex align-left">
-            <div class="swiper-button-prev d-flex align-left align-middle text-s text-medium">
-                <i class="icon-ar-left"></i> Назад
+            <div class="swiper-button__wrap d-flex align-left">
+                <div class="swiper-button-prev d-flex align-left align-middle text-s text-medium">
+                    <i class="icon-ar-left"></i> Назад
+                </div>
+                <div class="swiper-button-next d-flex align-right align-middle text-s text-medium">
+                    Дальше <i class="icon-ar-right"></i>
+                </div>
             </div>
-            <div class="swiper-button-next d-flex align-right align-middle text-s text-medium">
-                Дальше <i class="icon-ar-right"></i>
-            </div>
-        </div>
 
         </div>
     </section>
@@ -647,6 +721,76 @@
             <div id="map" class="s-contacts__map"></div>
         </div>
     </section>
+
+
+    <div class="ipad-slider">
+
+        <div class="quote-slider-wrapper">
+            <div class="swiper-container quote-slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="quote-text-wrap">
+                            <div class="quote-text">
+                                Harry Potter is a series of fantasy literature written by British author J. K. Rowling.
+                                The novels chronicle the life of a young wizard, Harry Potter, and his friends Hermione
+                                Granger and Ron Weasley, all of whom are students at Hogwarts School of Witchcraft and
+                                Wizardry.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="quote-text-wrap">
+                            <div class="quote-text">
+                                Jason Bourne is a fictional character and the protagonist of a series of novels by
+                                Robert Ludlum and subsequent film adaptations. He first appeared in the novel The Bourne
+                                Identity (1980), which was adapted for television in 1988. Chiang Mai sometimes written
+                                as "Chiengmai" or "Chiangmai", is the largest and most culturally significant city in
+                                Northern Thailand.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="quote-text-wrap">
+                            <div class="quote-text">
+                                Chiang Mai sometimes written as "Chiengmai" or "Chiangmai", is the largest and most
+                                culturally significant city in Northern Thailand.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="image-slider-wrapper">
+            <div class="swiper-container image-slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="swiper-slide-inner" data-swiper-parallax="50%">
+                            <img class="swiper-lazy" src="https://source.unsplash.com/gOApUyqOo-c/20x10"
+                                 data-src="https://source.unsplash.com/gOApUyqOo-c/1200x900"/>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide-inner" data-swiper-parallax="50%">
+                            <img class="swiper-lazy" src="https://source.unsplash.com/Rcs5zylYqMc/20x10"
+                                 data-src="https://source.unsplash.com/Rcs5zylYqMc/1200x900"/>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide-inner" data-swiper-parallax="50%">
+                            <img class="swiper-lazy" src="https://source.unsplash.com/vXPF8MmN2FA/20x10"
+                                 data-src="https://source.unsplash.com/vXPF8MmN2FA/1200x900"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+
+    </div>
 </main>
 
 <footer class="footer">
@@ -866,6 +1010,39 @@
     $(window).on('load', function () {
         initializeMap();
     });
+</script>
+
+<script>
+    var quoteSwiper = new Swiper('.quote-slider', {
+        direction: "horizontal",
+        effect: "slide",
+        //autoHeight: true,
+        loop: false, // Not recommended to enable!!!
+        allowTouchMove: false,
+    });
+
+
+    var $Speed = 1000;
+
+    var imageSwiper = new Swiper('.image-slider', {
+        mousewheel: true,
+        speed: $Speed,
+        loop: false, // Not recommended to enable!!!
+        longSwipesRatio: 0.01,
+        followFinger: false,
+        grabCursor: true,
+        watchSlidesProgress: true,
+        parallax: true,
+        lazy: {
+            loadPrevNext: true,
+        },
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        }
+    });
+
+    imageSwiper.controller.control = this.quoteSwiper;
 </script>
 </body>
 </html>
