--- a/blog-inner.html
+++ b/blog-inner.html
@@ -50,17 +50,17 @@
                 <nav class="navbar__menu">
                     <ul class="menu">
                         <li class="menu-item  current-menu-item">
-                            <a href="">О нас</a>
+                            <a href="about.html">О нас</a>
                         </li>
                         <li class="menu-item">
-                            <a href=""> Портфолио</a>
+                            <a href="portfolio.html"> Портфолио</a>
                         </li>
                         <li class="menu-item">
-                            <a href="">Новости</a>
+                            <a href="blog.html">Новости</a>
                         </li>
 
                         <li class="menu-item">
-                            <a href="">Контакты</a>
+                            <a href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -69,8 +69,8 @@
                 <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-bold">+0 000 000 00 00</a>
 
                 <div class="lang__wrap --relative">
-                    <div class="lang__current">
-                        <a href="/ru/">RU</a><!--поточна мова-->
+                    <div class="lang__current d-flex align-middle">
+                        <a href="/ru/">RU</a> <i class="icon-ar-bottom"></i> <!--поточна мова-->
                     </div>
 
                     <ul class="lang">
@@ -92,15 +92,21 @@
         <div class="row">
             <div class="col-xl-11 col-lg-11 col-md-11 col-sm-11 col-xs-12">
                 <div class="kama_breadcrumbs">
-                    <p id="breadcrumbs">
-                        <span>
-                            <span>
-                                <a href="https://www.silk.lviv.ua/">Головна</a>
-                            </span> &nbsp;/&nbsp;
-                            <span class="breadcrumb_last" aria-current="page">Новости</span>
-                        </span>
-                    </p>
+                    <span>
+                        <a href="">
+                            <span>Главная</span>
+                        </a>
+                    </span>
+                    <span class="kb_sep"><i class="icon-ar-forward"></i></span>
+                    <span>
+                        <a href="">
+                            <span>Новости</span>
+                        </a>
+                    </span>
+                    <span class="kb_sep"><i class="icon-ar-forward"></i></span>
+                    <span class="kb_title">Опытный застройщик и собственая инфарструктура</span>
                 </div>
+
             </div>
         </div>
     </div>
@@ -114,13 +120,13 @@
                     </h1>
 
                 </div>
-                <div class="col-xl-5 col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <div class="d-flex align-middle align-right">
+                <div class="col-xl-5 col-lg-4 col-md-4 col-sm-12 col-xs-12 ">
+                    <div class="d-flex align-middle s-article__action">
                         <div class="s-article__date  text-s s-article__date">
                             12.05.24
                         </div>
-                        <div class="s-article__share btn btn-primary">
-                            Поділитися
+                        <div class="s-article__share text-s d-flex align-middle ">
+                            <i class="icon-share"></i> Поділитися
                         </div>
                     </div>
 
@@ -236,6 +242,96 @@
         <div class="container">
             <div class="row align-center">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="s-text__description editor-style">
+                        <h4>Praesent semper feugiat nibh sed pulvinar proin gravida. Etiam erat velit scelerisque in
+                            dictum non.</h4>
+                        <p>Tellus mauris a diam maecenas sed enim ut sem. Lacinia at quis risus sed vulputate. Aliquam
+                            sem fringilla ut
+                            morbi tincidunt. Cras adipiscing enim eu turpis egestas pretium aenean pharetra. Sit amet
+                            aliquam id diam
+                            maecenas ultricies mi eget. Lectus quam id leo in vitae. Arcu felis bibendum ut tristique.
+                            Neque egestas
+                            congue
+                            quisque egestas. A scelerisque purus semper eget duis. Volutpat consequat mauris nunc
+                            congue. Accumsan in
+                            nisl
+                            nisi scelerisque eu. At lectus urna duis convallis convallis tellus id interdum. Nullam eget
+                            felis eget nunc
+                            lobortis mattis aliquam faucibus. Tristique et egestas quis ipsum suspendisse ultrices
+                            gravida. Habitant
+                            morbi
+                            tristique senectus et netus et malesuada.</p>
+                        <p> Nec ullamcorper sit amet risus nullam eget felis eget. Quis lectus nulla at volutpat diam ut
+                            venenatis
+                            tellus
+                            in. Donec enim diam vulputate ut pharetra sit. Egestas congue quisque egestas diam in arcu
+                            cursus euismod
+                            quis.
+                            Euismod in pellentesque massa placerat. Mi proin sed libero enim sed faucibus turpis in eu.
+                            Condimentum id
+                            venenatis a condimentum vitae sapien. Varius sit amet mattis vulputate enim nulla aliquet
+                            porttitor.</p>
+                        <h3>Id eu nisl nunc mi ipsum faucibus vitae aliquet. Vitae justo eget magna fermentum
+                            iaculis.</h3>
+                        <ul>
+                            <li>Tellus mauris a diam maecenas sed enim ut sem.</li>
+                            <li>Lacinia at quis risus sed vulputate.</li>
+                            <li>Aliquam sem fringilla ut morbi tincidunt.</li>
+                            <li>Cras adipiscing enim eu turpis egestas pretium aenean pharetra.</li>
+                            <li>Sit amet aliquam id diam maecenas ultricies mi eget.</li>
+                        </ul>
+
+
+                        <h4>Praesent semper feugiat nibh sed pulvinar proin gravida. Etiam erat velit scelerisque in
+                            dictum non.</h4>
+                        <p>Tellus mauris a diam maecenas sed enim ut sem. Lacinia at quis risus sed vulputate. Aliquam
+                            sem fringilla ut
+                            morbi tincidunt. Cras adipiscing enim eu turpis egestas pretium aenean pharetra. Sit amet
+                            aliquam id diam
+                            maecenas ultricies mi eget. Lectus quam id leo in vitae. Arcu felis bibendum ut tristique.
+                            Neque egestas
+                            congue
+                            quisque egestas. A scelerisque purus semper eget duis. Volutpat consequat mauris nunc
+                            congue. Accumsan in
+                            nisl
+                            nisi scelerisque eu. At lectus urna duis convallis convallis tellus id interdum. Nullam eget
+                            felis eget nunc
+                            lobortis mattis aliquam faucibus. Tristique et egestas quis ipsum suspendisse ultrices
+                            gravida. Habitant
+                            morbi
+                            tristique senectus et netus et malesuada.</p>
+                        <p> Nec ullamcorper sit amet risus nullam eget felis eget. Quis lectus nulla at volutpat diam ut
+                            venenatis
+                            tellus
+                            in. Donec enim diam vulputate ut pharetra sit. Egestas congue quisque egestas diam in arcu
+                            cursus euismod
+                            quis.
+                            Euismod in pellentesque massa placerat. Mi proin sed libero enim sed faucibus turpis in eu.
+                            Condimentum id
+                            venenatis a condimentum vitae sapien. Varius sit amet mattis vulputate enim nulla aliquet
+                            porttitor.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="s-image  mb-20">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="img__wrap --relative">
+                        <img src="assets/img/news-1.png" alt="" class="img">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="s-text mb-20">
+        <div class="container">
+            <div class="row align-center">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="s-text-img__description editor-style">
                         <h4>Praesent semper feugiat nibh sed pulvinar proin gravida. Etiam erat velit scelerisque in
                             dictum non.</h4>
@@ -310,11 +406,18 @@
         </div>
     </section>
 
-    <section class="s-image">
+    <section class="s-grid  mb-20">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 s-download__inner d-flex align-middle  align-justify">
-                    <div class=""
+            <div class="row m-row">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 column">
+                    <div class="img__wrap --relative">
+                        <img src="assets/img/news-1.png" alt="" class="img">
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 column">
+                    <div class="img__wrap --relative">
+                        <img src="assets/img/news-1.png" alt="" class="img">
+                    </div>
                 </div>
             </div>
         </div>
@@ -539,14 +642,17 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-xl-8">© 2024 KLAN | Все права защищены <span
-                        class="f-divider">&nbsp;</span><a
-                        href="/privacy">Політика конфіденційності</a></div>
+                <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                    <div class="copyright">
+                        <span>© 2024 KLAN | Все права защищены </span>
+                        <a href="">Політика конфіденційності</a>
+                    </div>
+                </div>
 
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="develop d-flex align-middle align-right">
                         <div class="develop__text">Разработано:</div>
-                        <a href="https://redstone.media/" class="d-inline-flex align-items-center develop__link">
+                        <a href="" class="d-inline-flex align-items-center develop__link">
                             <img src="assets/img/WebTune-logo.svg">
                         </a>
                     </div>
