--- a/contacts.html
+++ b/contacts.html
@@ -65,8 +65,8 @@
                 <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-bold">+0 000 000 00 00</a>
 
                 <div class="lang__wrap --relative">
-                    <div class="lang__current">
-                        <a href="/ru/">RU</a><!--поточна мова-->
+                    <div class="lang__current d-flex align-middle">
+                        <a href="/ru/">RU</a> <i class="icon-ar-bottom"></i> <!--поточна мова-->
                     </div>
 
                     <ul class="lang">
